# scapy-usbbluetooth

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml
examples/: list_controllers.py  list_devices.py  reset_controllers.py  reset_devices.py
src/scapy_usbbluetooth/: __init__.py  usbbluetooth_socket.py
