[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scapy-usbbluetooth"
dynamic = ["version"]
authors = [
  { name="Antonio Vázquez Blanco", email="antoniovazquezblanco@gmail.com" },
]
description = "Scapy helpers to communicate with Bluetooth controllers"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scapy",
    "usbbluetooth"
]

[project.urls]
"Homepage" = "https://github.com/antoniovazquezblanco/scapy-usbbluetooth"
"Bug Tracker" = "https://github.com/antoniovazquezblanco/scapy-usbbluetooth/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scapy_usbbluetooth"]

[tool.hatch.version]
source = "vcs"
