[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scapy-usbbluetooth"
dynamic = ["version"]
authors = [
  { name="Antonio Vázquez Blanco", email="antoniovazquezblanco@gmail.com" },
]
description = "Scapy helpers to communicate with Bluetooth controllers"
readme = "README.md"
license = { text="GPL-3.0-only" }
requires-python = ">=3.0"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Security",
]
dependencies = [
    "scapy",
    "usbbluetooth>=0.1.0"
]
keywords = [ "bluetooth" ]

[project.urls]
"Homepage" = "https://github.com/usbbluetooth/scapy-usbbluetooth"
"Bug Tracker" = "https://github.com/usbbluetooth/scapy-usbbluetooth/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scapy_usbbluetooth"]

[tool.hatch.version]
source = "vcs"
